First controller and Razor pages tests

--- a/SalesWebMVC/Views/Home/About.cshtml
+++ b/SalesWebMVC/Views/Home/About.cshtml
@@ -4,4 +4,13 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Ola bem vindo ao primeiro projeto.</p>
+<p>Name Developer: @ViewData["Developer"]</p>
+<p>Contact : @ViewData["Contact"]</p>
+<address>
+    <strong>Instagram  Profile:</strong><a href="https://www.instagram.com/wiliamrf/">Wiliam Freitas</a>
+</address>
+
+
+
+
