--- a/SalesWebMVC/Views/_ViewImports.cshtml
+++ b/SalesWebMVC/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using SalesWebMVC
+@using SalesWebMVC.Models.ViewModels
 @using SalesWebMVC.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
